--- a/index.html
+++ b/index.html
@@ -4,9 +4,48 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <!-- Link to style sheet -->
+    <link rel="stylesheet" href="./assets/style.css">
+
+    <title>Coding Quiz</title>
+
 </head>
 <body>
     
+    <div class="quiz-container" id="quiz">
+        <div class="quiz-header">
+            <h2 id="question">
+                Question text
+            </h2>
+            <ul>
+                <li>
+                    <input type="radio" name="answer" id="a" class="answer">
+                    <label for="a" id="a-text">Answer Text</label>
+                </li>
+
+                <li>
+                    <input type="radio" name="answer" id="b" class="answer">
+                    <label for="b" id="b-text">Answer Text</label>
+                </li>
+
+                <li>
+                    <input type="radio" name="answer" id="c" class="answer">
+                    <label for="c" id="c-text">Answer Text</label>
+                </li>
+
+                <li>
+                    <input type="radio" name="answer" id="d" class="answer">
+                    <label for="d" id="d-text">Answer Text</label>
+                </li>
+
+            </ul>
+        </div>
+        <button id="submit">Submit</button>
+    </div>
+
+
+
+    <!-- Link to script -->
+    <script src="./assets/script.js"></script>
 </body>
 </html>
