--- a/index.html
+++ b/index.html
@@ -20,22 +20,22 @@
             <ul>
                 <li>
                     <input type="radio" name="answer" id="a" class="answer">
-                    <label for="a" id="a-text">Answer Text</label>
+                    <label for="a" id="a_txt">Answer Text</label>
                 </li>
 
                 <li>
                     <input type="radio" name="answer" id="b" class="answer">
-                    <label for="b" id="b-text">Answer Text</label>
+                    <label for="b" id="b_txt">Answer Text</label>
                 </li>
 
                 <li>
                     <input type="radio" name="answer" id="c" class="answer">
-                    <label for="c" id="c-text">Answer Text</label>
+                    <label for="c" id="c_txt">Answer Text</label>
                 </li>
 
                 <li>
                     <input type="radio" name="answer" id="d" class="answer">
-                    <label for="d" id="d-text">Answer Text</label>
+                    <label for="d" id="d_txt">Answer Text</label>
                 </li>
 
             </ul>
