rewrote all html and css for new design and to implement highscores

--- a/index.html
+++ b/index.html
@@ -4,48 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- Link to style sheet -->
-    <link rel="stylesheet" href="./assets/style.css">
-
     <title>Coding Quiz</title>
-
+    <link rel="stylesheet" href="./assets/style.css">
 </head>
 <body>
-    
-    <div class="quiz-container" id="quiz">
-        <div class="quiz-header">
-            <h2 id="question">
-                Question text
-            </h2>
-            <ul>
-                <li>
-                    <input type="radio" name="answer" id="a" class="answer">
-                    <label for="a" id="a_txt">Answer Text</label>
-                </li>
-
-                <li>
-                    <input type="radio" name="answer" id="b" class="answer">
-                    <label for="b" id="b_txt">Answer Text</label>
-                </li>
-
-                <li>
-                    <input type="radio" name="answer" id="c" class="answer">
-                    <label for="c" id="c_txt">Answer Text</label>
-                </li>
-
-                <li>
-                    <input type="radio" name="answer" id="d" class="answer">
-                    <label for="d" id="d_txt">Answer Text</label>
-                </li>
-
-            </ul>
+    <div class="contianer">
+        <div id="home" class="flex-column flex-center">
+            <h1>Code Quiz Game</h1>
+            <a href="/game.html" class="btn">Play</a>
+            <a href="/highscores.html" class="btn">Highscores</a>
         </div>
-        <button id="submit">Submit</button>
     </div>
-
-
-
-    <!-- Link to script -->
-    <script src="./assets/script.js"></script>
 </body>
 </html>
