--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div id="home" class="flex-column flex-center">
             <h1>Code Quiz Game</h1>
             <a href="/game.html" class="btn">Play</a>
-            <a href="/highscores.html" class="btn">Highscores</a>
+            <a href="/highscores.html" id="highscore-btn" class="btn">Highscores</a>
         </div>
     </div>
 </body>
