--- a/game.html
+++ b/game.html
@@ -29,7 +29,7 @@
                     </h1>
                 </div>
             </div>
-            <div id="question">This is just filler text at the moment</div>
+            <h1 id="question">This is just filler text at the moment</h1>
             <div class="choice-contianer">
                 <p class="choice-prefix">A</p>
                 <p class="choice-text" data-number="1">Choice</p>
