--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="contianer">
         <div id="home" class="flex-column flex-center">
             <h1>Code Quiz Game</h1>
-            <a href="/game.html" class="btn">Play</a>
+            <a href="./game.html" class="btn">Play</a>
             <a href="/highscores.html" id="highscore-btn" class="btn">Highscores</a>
         </div>
     </div>
