--- a/game.html
+++ b/game.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="./assets/css/game.css">
 </head>
 <body>
+    <span id="timer"></span>
     <div class="contianer">
         <div id="game" class="justify-center flex-column">
             <div id="hud">
@@ -16,9 +17,10 @@
                     <p id="progressText" class="hud-prefix">
                         Question
                     </p>
-                    <div id="progressBar">
+                    <!-- Progress bar not working correctly
+                         <div id="progressBar">
                         <div id="progressBarfull"></div>
-                    </div>
+                    </div> -->
                 </div>
                 <div class="hud-item">
                     <p class="hud-prefix">
@@ -49,5 +51,6 @@
         </div>
     </div>
     <script src="./assets/js/game.js"></script>
+    <script src="./assets/js/script.js"></script>    
 </body>
 </html>
