--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <div class="contianer">
         <div id="home" class="flex-column flex-center">
             <h1>Code Quiz Game</h1>
-            <a href="./game.html" class="btn startBtn">Play</a>
-            <a href="/highscores.html" id="highscore-btn" class="btn">Highscores</a>
+            <a href="game.html" class="btn startBtn">Play</a>
+            <a href="highscores.html" id="highscore-btn" class="btn">Highscores</a>
         </div>
     </div>
     <script src="./assets/js/script.js"></script> 
