save point. still need highscores to display

--- a/game.html
+++ b/game.html
@@ -17,10 +17,15 @@
                     <p id="progressText" class="hud-prefix">
                         Question
                     </p>
+                    <div class="timer">
+                        <h3 class="time_text">Time left</h3>
+                        <h3 class="timer_sec">100</h3>
+                    </div>
                     <!-- Progress bar not working correctly
                          <div id="progressBar">
                         <div id="progressBarfull"></div>
                     </div> -->
+
                 </div>
                 <div class="hud-item">
                     <p class="hud-prefix">
@@ -50,7 +55,6 @@
             </div>
         </div>
     </div>
-    <script src="./assets/js/game.js"></script>
-    <script src="./assets/js/script.js"></script>    
+    <script src="./assets/js/game.js"></script>  
 </body>
 </html>
