--- a/endquiz.html
+++ b/endquiz.html
@@ -17,11 +17,13 @@
                 </h2>
                 <input type="text" name="name" id="username"
                 placeholder="Enter Your Initials">
-                <button class="btn" id="saveScoreBtn" type="submit" onclick="saveHighScore(event)">Save</button>
+                <button class="btn" id="saveScoreBtn" type="submit" 
+                onclick="saveHighScore(event)">Save</button>
             </form>
             <a href="./game.html" class="btn">Play Again</a>
             <a href="./index.html" class="btn">Go Home</a>
         </div>
     </div>
+    <script src="./assets/js/endquiz.js"></script>
 </body>
 </html>
