--- a/highscores.html
+++ b/highscores.html
@@ -16,5 +16,6 @@
             <a href="index.html" class="btn">Go Home</a>
         </div>
     </div>
+    <script src="./assets/js/highscores.js"></script>
 </body>
 </html>
