--- a/index.html
+++ b/index.html
@@ -15,6 +15,6 @@
             <a href="highscores.html" id="highscore-btn" class="btn">Highscores</a>
         </div>
     </div>
-    <script src="./assets/js/script.js"></script> 
+    <script src="./assets/js/game.js"></script> 
 </body>
 </html>
