--- a/game.html
+++ b/game.html
@@ -17,11 +17,8 @@
                     <p id="progressText" class="hud-prefix">
                         Question
                     </p>
-                    <div class="timer">
-                        <h3 class="time_text">Time left</h3>
-                        <h3 class="timer_sec">100</h3>
-                    </div>
-                    <!-- Progress bar not working correctly
+                    <h2 id="countdown"></h2>
+                    <!-- Progress bar not working correctly 
                          <div id="progressBar">
                         <div id="progressBarfull"></div>
                     </div> -->
@@ -56,5 +53,6 @@
         </div>
     </div>
     <script src="./assets/js/game.js"></script>  
+    <script src="./assets/js/script.js"></script>
 </body>
 </html>
