--- a/index.html
+++ b/index.html
@@ -6,12 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Coding Quiz</title>
     <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="stylsheet" href="./assets/css/game.css">
 </head>
 <body>
     <div class="contianer">
         <div id="home" class="flex-column flex-center">
             <h1>Code Quiz Game</h1>
-            <a href="game.html" class="btn startBtn">Play</a>
+            <a href="game.html" id="start" class="btn">Play</a>
             <a href="highscores.html" id="highscore-btn" class="btn">Highscores</a>
         </div>
     </div>
