--- a/endquiz.html
+++ b/endquiz.html
@@ -18,7 +18,7 @@
                 <input type="text" name="name" id="username"
                 placeholder="Enter Your Initials">
                 <button class="btn" id="saveScoreBtn" type="submit" 
-                onclick="saveHighScore(event)">Save</button>
+                onclick="saveHighScore(event)" disabled >Save</button>
             </form>
             <a href="./game.html" class="btn">Play Again</a>
             <a href="./index.html" class="btn">Go Home</a>
