--- a/highscores.html
+++ b/highscores.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="./assets/css/highscores.css">
 </head>
 <body>
-    <div class="container">
+    <div class="contianer">
         <div id="highScores" class="flex-center flex-column">
             <h1 id="finalScore">High Scores</h1>
             <ul id="highScoresList"></ul>
