--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Coding Quiz</title>
     <link rel="stylesheet" href="./assets/css/style.css">
-    <link rel="stylsheet" href="./assets/css/game.css">
+    <link rel="stylsheet" href="./assets/css/highscores.css">
 </head>
 <body>
     <div class="contianer">
